src/objects/Server__c.object
<CustomObject>
    <fields>
        <fullName>Installed_Services__c</fullName>
        <description>Any pre-installed services</description>
        <inlineHelpText>Any pre-installed services</inlineHelpText>
        <label>Installed Services</label>
        <picklist>
            <picklistValues>
                <fullName>ANT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Git</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SharePoint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maven</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Instance_URL__c</fullName>
        <label>Instance URL</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Operating_System__c</fullName>
        <description>Choose Server Operating System</description>
        <inlineHelpText>Choose Server Operating System</inlineHelpText>
        <label>Operating System</label>
        <picklist>
            <picklistValues>
                <fullName>Windows</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Linux</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solaris</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <description>Password of the instance</description>
        <inlineHelpText>Password of the instance</inlineHelpText>
        <label>Password</label>
        <length>100</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Platform__c</fullName>
        <description>Type of server platform. Choose only one</description>
        <inlineHelpText>Type of server platform. Choose only one</inlineHelpText>
        <label>Platform</label>
        <picklist>
            <picklistValues>
                <fullName>EC2</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Salesforce.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Heroku</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CloudFoundry</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reserved__c</fullName>
        <label>Reserved</label>
        <summaryFilterItems>
            <field>Reservation__c.Reserved__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Reservation__c.Reserved_Server__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Reserved_text__c</fullName>
        <description>Show status of free or reserved server</description>
        <formula>IF(  Reserved__c ==0, &quot;FREE&quot;, &quot;RESERVED&quot;)</formula>
        <inlineHelpText>Show status of free or reserved server</inlineHelpText>
        <label>Reserved</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Security_Token__c</fullName>
        <label>Security Token</label>
        <length>100</length>
        <maskChar>asterisk</maskChar>
        <maskType>lastFour</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Supported_Programming_Language__c</fullName>
        <description>Choose any supported programming languages for this instance / server</description>
        <inlineHelpText>Choose any supported programming languages for this instance / server</inlineHelpText>
        <label>Supported Programming Language</label>
        <picklist>
            <picklistValues>
                <fullName>C#</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Java</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Python</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PHP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Node.js</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ruby</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <description>Username to the instance</description>
        <inlineHelpText>Username to the instance</inlineHelpText>
        <label>Username</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Server</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Platform__c</columns>
        <columns>Operating_System__c</columns>
        <columns>Reserved__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Free_Server_Instance</fullName>
        <columns>NAME</columns>
        <columns>Operating_System__c</columns>
        <columns>Platform__c</columns>
        <columns>Reserved__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Server__c.Free</value>
        </filters>
        <label>Free Server Instance</label>
    </listViews>
    <listViews>
        <fullName>Reserved_Server</fullName>
        <columns>NAME</columns>
        <columns>Platform__c</columns>
        <columns>Operating_System__c</columns>
        <columns>Reserved__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Server__c.Reserved</value>
        </filters>
        <label>Reserved Server</label>
    </listViews>
    <nameField>
        <displayFormat>SID-{0000}</displayFormat>
        <label>Server ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Servers</pluralLabel>
    <recordTypes>
        <fullName>Free</fullName>
        <active>true</active>
        <description>Free server instance</description>
        <label>Free</label>
    </recordTypes>
    <recordTypes>
        <fullName>Reserved</fullName>
        <active>true</active>
        <label>Reserved</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>